--- a/Server/package.json
+++ b/Server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "nodemailer": "^7.0.12",
+    "nodemon": "^3.1.11",
     "pg": "^8.17.2",
     "stripe": "^20.2.0"
   }
