--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "@stripe/react-stripe-js": "^5.6.0",
     "@stripe/stripe-js": "^8.7.0",
     "axios": "^1.13.4",
+    "framer-motion": "^12.31.1",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
