--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-hook": "^0.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "react-snowfall": "^2.4.0",
