--- a/Client/package.json
+++ b/Client/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@n8n/chat": "^1.7.1",
     "@reduxjs/toolkit": "^2.11.2",
     "@stripe/react-stripe-js": "^5.6.0",
     "@stripe/stripe-js": "^8.7.0",
     "axios": "^1.13.4",
     "framer-motion": "^12.31.1",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-hook": "^0.0.1",
